--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="index.html">
-                        Home</a>
-                </li>
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html">
+                        Home</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html">About</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="Image_Albums.html#content4-12">Places</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="Image_Albums.html#content4-13">People</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="Image_Albums.html#content4-14">This 'n' that</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="Image_Albums.html#content4-15">Nature</a></li><li class="nav-item">
+                    <a class="nav-link link text-black display-4" href="Image_Albums.html#content4-16">Sport</a>
+                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html">Contact</a></li>
                 <li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="Album_Index.html">Albums</a>
+                    <a class="nav-link link text-black display-4" href="#top">Albums</a>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="header4 cid-rthLQ0OE0J mbr-parallax-background" id="header4-1">
+<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="header4 cid-rthLQ0OE0J mbr-parallax-background" id="header4-1">
 
     
 
