--- a/Keukenhof.html
+++ b/Keukenhof.html
@@ -47,18 +47,15 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html">
-                        Home</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html">About</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="Image_Albums.html#content4-12">Places</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="Image_Albums.html#content4-13">People</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="Image_Albums.html#content4-14">This 'n' that</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="Image_Albums.html#content4-15">Nature</a></li><li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="Image_Albums.html#content4-16">Sport</a>
-                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html">Contact</a></li>
-                <li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="#top">Albums</a>
-                </li></ul>
+                        Home</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html">About</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="Places.html">Places</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="People.html">People</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="ThisandThat.html">This 'n' that</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="Nature.html">Nature</a></li><li class="nav-item">
+                    <a class="nav-link link text-black display-4" href="Sport.html">Sport</a>
+                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html">Contact</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="mbr-section content4 cid-rthU2UmNjd" id="content4-8">
+<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="mbr-section content4 cid-rthU2UmNjd" id="content4-8">
 
     
 
