--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="header4 cid-rthLQ0OE0J mbr-parallax-background" id="header4-1">
+<section class="engine"><a href="https://mobirise.info/f">easy web maker</a></section><section class="header4 cid-rthLQ0OE0J mbr-parallax-background" id="header4-1">
 
     
 
@@ -74,7 +74,7 @@
                 
             </div>
             <div class="mbr-figure pt-5">
-                <a href="Album_Index.html#content5-4"><img src="assets/images/-mg-5283-1368x912.jpg" alt="Mobirise" title="" style="width: 45%;"></a>
+                <a href="Album_Index.html#content5-4"><img src="assets/images/-mg-5283-1368x912.jpg" alt="Mobirise" title="" style="width: 80%;"></a>
             </div>
         </div>
     </div>
