create github pages

--- a/Keukenhof.html
+++ b/Keukenhof.html
@@ -25,6 +25,21 @@
   
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-169179804-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-169179804-1');
+</script>
+
+<!-- /Analytics -->
+
+
   <section class="menu cid-rthQ5BuJsT" once="menu" id="menu2-6">
 
     
@@ -55,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="mbr-section content4 cid-rthU2UmNjd" id="content4-8">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="mbr-section content4 cid-rthU2UmNjd" id="content4-8">
 
     
 
