--- a/People.html
+++ b/People.html
@@ -26,6 +26,21 @@
   
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-169179804-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-169179804-1');
+</script>
+
+<!-- /Analytics -->
+
+
   <section class="menu cid-rthKZpUURX" once="menu" id="menu2-1g">
 
     
@@ -56,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="mbr-section content4 cid-s0mFYZzeZy" id="content4-1i">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section content4 cid-s0mFYZzeZy" id="content4-1i">
 
     
 
