--- a/Whitby.html
+++ b/Whitby.html
@@ -25,6 +25,21 @@
   
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-169179804-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-169179804-1');
+</script>
+
+<!-- /Analytics -->
+
+
   <section class="menu cid-rthKZpUURX" once="menu" id="menu2-c">
 
     
@@ -55,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section content4 cid-rtickC4c4G" id="content4-d">
+<section class="engine"><a href="https://mobirise.info/f">simple site creator</a></section><section class="mbr-section content4 cid-rtickC4c4G" id="content4-d">
 
     
 
