--- a/index.html
+++ b/index.html
@@ -24,6 +24,21 @@
   
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-169179804-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-169179804-1');
+</script>
+
+<!-- /Analytics -->
+
+
   <section class="menu cid-rthKZpUURX" once="menu" id="menu2-0">
 
     
@@ -54,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="header4 cid-rthLQ0OE0J mbr-parallax-background" id="header4-1">
+<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="header4 cid-rthLQ0OE0J mbr-parallax-background" id="header4-1">
 
     
 
