--- a/Places.html
+++ b/Places.html
@@ -25,6 +25,21 @@
   
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-169179804-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-169179804-1');
+</script>
+
+<!-- /Analytics -->
+
+
   <section class="menu cid-rthKZpUURX" once="menu" id="menu2-1c">
 
     
@@ -55,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section class="mbr-section content4 cid-s0mFi6mkWD" id="content4-1d">
+<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="mbr-section content4 cid-s0mFi6mkWD" id="content4-1d">
 
     
 
